...
            }}
           testID="rider.finish-ride.push-rate-rider"/>
          <CustomButton
            title={t('finish_ride.back_to_home')}
            className="w-full"
            onPress={handleGoHome}
           testID="rider.finish-ride.handle-go-home"/>
        </View>
      </ReactNativeModal>

      <TollParkingModal visible={showTollModal} rideId={activeRideId} onClose={() => setShowTollModal(false)} />
      </RideLayout>

...
